--- a/Jungle-Academy/portfolio4-admin_design/css/header.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.scss
@@ -17,9 +17,8 @@ input, button, select {
   font: inherit;
 }
 
-select {
-  // appearance: none;
-}
+select {appearance: none;}
+select::-ms-expand {display:none}
 
 button {
   cursor: pointer;
@@ -32,6 +31,24 @@ table {
   border: 0 none;
 }
 //</reset>
+
+#skip-nav {
+  position: fixed;
+  top: -41px;
+  left: 0px;
+  width: 100%;
+  line-height: 40px;
+  text-align: center;
+  font-size: 16px;
+  color: #fff;
+  background: rgba(0,0,0,0.5);
+  z-index: 9999;
+  transition: top .3s;
+
+  &:focus {
+    top: 0px;
+  }
+}
 
 header {
   position: fixed;
@@ -56,11 +73,10 @@ i {
   height: 0px;
 }
 
-caption.child-text-ir {
-  position: initial;
-  text-indent: -9999px;
-  width: 0px;
-  height: 0px;
+caption.child-text-ir, label.child-text-ir {
+  overflow: hidden;
+  width: 0;
+  height: 0;
 }
 
 #main-tnb {
@@ -94,7 +110,6 @@ caption.child-text-ir {
     }
   
     .bell {
-      //왼쪽에 라인 1px로 넣어주기
       position: relative;
       margin-left: 31px;
 
@@ -162,20 +177,6 @@ caption.child-text-ir {
   border-radius: 20px;
   margin-top: 10px;
   margin-right: 30px;
-
-  &.notice:after {
-    content: '';
-    display: block;
-    background-color: #27A498;
-    width: 10px;
-    height: 10px;
-    position: absolute;
-    top: auto;
-    bottom: 0px;
-    right: -3px;
-    border: 2px solid #f5f5f5;
-    border-radius: 10px;
-  }
 }
 
 .user-wrap {
@@ -255,8 +256,9 @@ caption.child-text-ir {
             border-radius: 2px;
           }
 
+          //알림갯수 고치기
           &.notice:after {
-            content: '';
+            content: '110';
             display: inline-block;
             position: absolute;
             top: 12px;
@@ -299,7 +301,6 @@ caption.child-text-ir {
 }
 
 //#main-gnb
-
 #main-gnb {
   position: fixed;
   top: 61px;
