--- a/Jungle-Academy/portfolio4-admin_design/css/sub-page/subpage-list.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/sub-page/subpage-list.scss
@@ -1,4 +1,4 @@
-body {
+body.sub {
   color: #2D3138;
 }
 
@@ -16,7 +16,6 @@ main {
   background: #fff;
 }
 
-  //border 색이 일정하지 않음
 table {
   width: 100%;
   border-top: 2px solid rgba(0,0,0,0.1);
@@ -30,6 +29,10 @@ table {
   td, th {
     border-bottom: 1px solid rgba(0,0,0,0.1);
   }
+
+  i {
+    font-size: inherit;
+  }
 }
 
 header.open + main {
@@ -41,23 +44,43 @@ header.open + main {
   height: 30%;
   padding-bottom: 50px;
 
-  > a {
+  
+  .list-btn-style {
     position: absolute;
-    right: 0%;
     display: block;
-    width: 8%;
+    width: 80px;
     line-height: 30px;
+    font-size: 12px;
     color: #fff;
-    text-align: center;
-    font-size: 11px;
-    font-weight: bold;
-    background: #E9595A;
     border-radius: 0px 0px 3px 3px; 
+    background: #E9595A;
     box-shadow: 0px 4px #ab3c3c;
 
     &:hover {
       top: 2px;
       box-shadow: 0 2px #ab3c3c;
+    }
+  }
+
+  .write-btn {
+    right: 0%;
+    color: #fff;
+    text-align: center;
+    font-size: 11px;
+    font-weight: bold;
+  }
+
+  .search-btn {
+    left: 50%;
+    bottom: 8px;
+    transform: translateX(-50%);
+    background: #888;
+    box-shadow: 0px 4px rgb(34, 34, 34);
+    
+    &:hover {
+      top: auto;
+      bottom: 6px;
+      box-shadow: 0 2px rgb(34, 34, 34);
     }
   }
 
@@ -72,13 +95,16 @@ header.open + main {
       text-align: left;
     }
 
+    tr:nth-child(2) {
+      label {
+        display: inline-block;
+        margin-right: 10px;
+      }
+    }
+
     td {
       padding-left: 14px;
       height: 35px;
-
-      label+label {
-        margin-left: 10px;
-      }
 
       input[type="text"] {
         width: calc(100% - 110px);
@@ -93,11 +119,11 @@ header.open + main {
       }
 
       select {
-        // padding: 0px 15px 0px 5px;
-        // background: url(../../img/icon/arrow-both.png) no-repeat right center / 14px;
+        padding: 0px 15px 0px 5px;
+        background: url(../../img/icon/arrow-both.png) no-repeat right center / 14px;
       }
 
-      i {
+      .sub.list i {
         font-size: 12px;
       }
     }
@@ -106,34 +132,12 @@ header.open + main {
       background: none;
     }
   }
-
-  button {
-    position: absolute;
-    left: 50%;
-    bottom: 2px;
-    transform: translateX(-50%);
-    display: block;
-    margin: 3% auto 0%;
-    width: 6%;
-    line-height: 30px;
-    font-size: 12px;
-    background: #888;
-    color: #fff;
-    border-radius: 0px 0px 3px 3px; 
-    box-shadow: 0px 4px rgb(34, 34, 34);
-
-    &:hover {
-      bottom: 0px;
-      box-shadow: 0 2px rgb(34, 34, 34);
-    }
-  }
 }
 
 .list-board {
   position: relative;
   margin-top: 2%;
   height: 66%;
-  // background: pink;
 
   table {
     font-size: 13px;
@@ -239,6 +243,16 @@ header.open + main {
 
 //sub (write)
 .write {
+  ul li span {
+    em {
+      display: inline-block;
+      width: 80%;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+    }
+  }
+
   .list-horizon {
     h2 {
       padding: 1% 0.8% 0.8%;
@@ -269,28 +283,46 @@ header.open + main {
         font-style: normal;
       }
     }
-
-    li+li {
-      margin-top: 5px;
-    }
   }
 
   .file-preview {
+    li+li {
+      margin-top: 5px;
+    }
+
     li {
+      position: relative;
       width: 95%;
       padding: 7px;
+
+      .file-size {
+        position: absolute;
+        top: 50%;
+        right: 5px;
+        transform: translate(0%, -50%);
+        margin: 0px;
+      }
+
+      .file-delete {
+        top: 50%;
+        right: 70px;
+        transform: translate(0%, -50%);
+      }
     }
   }
 
   .image-preview {
+    overflow: hidden;
+
     li {
-      display: inline-block;
+      position: relative;
+      display: block;
+      float: left;
       width: 200px;
       height: 210px;
-      margin-right: 10px;
+      margin: 5px 10px 0px 0px;
       padding: 5px;
       background: #FAFCFE;
-      vertical-align: bottom;
 
       div {
         position: relative;
@@ -316,18 +348,26 @@ header.open + main {
         }
       }
 
-      .file-size {
-
-      }
-
       .file-delete {
-
+        bottom: 5px;
+        right: 5px;
       }
-
     }
 
     .attached-image-fix {
       position: relative;
+    }
+  }
+
+  .list-btn-style {
+    bottom: 0px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    font-weight: bold;
+
+    &:hover {
+      top: auto;
+      bottom: -2px;
     }
   }
 }
@@ -340,7 +380,6 @@ header.open + main {
 .d-yellow {
   color: rgb(255, 204, 0);
 }
-
 
 .file-size {
   display: block;
@@ -356,21 +395,14 @@ header.open + main {
 }
 
 .file-delete {
-  top: auto;
-  left: auto;
-  right: 10px;
-  bottom: 10px;
-  transform: none;
-  margin: 0%;
-  width: auto;
-  line-height: 1;
-  background: none;
-  border-radius: 0px;
-  box-shadow: none;
-  color: inherit;
+  position: absolute;
 
   i {
     font-size: 20px;
     color: red;
+  }
+
+  &:hover {
+    background: yellow;
   }
 }
