--- a/Jungle-Academy/portfolio1-smart/css/main.css
+++ b/Jungle-Academy/portfolio1-smart/css/main.css
@@ -586,7 +586,7 @@ a {
   opacity: 0;
   -webkit-transition: all .3s;
   transition: all .3s;
-  padding-left: 50%;
+  padding-left: 600px;
   white-space: nowrap;
 }
 
