--- a/Jungle-Academy/portfolio1-smart/css/main.scss
+++ b/Jungle-Academy/portfolio1-smart/css/main.scss
@@ -529,7 +529,6 @@ a {text-decoration: none; color: inherit;}
       float: left;
       font-size: 50px;
       font-weight: normal;
-      
 
       span {
         display: block;
@@ -570,7 +569,7 @@ a {text-decoration: none; color: inherit;}
       top: 0;
       opacity: 0;
       transition: all .3s;
-      padding-left: 50%;
+      padding-left: 600px;
       white-space: nowrap;
 
       &.on {
