smart slide event 추가

--- a/Jungle-Academy/portfolio1-smart/css/main.css
+++ b/Jungle-Academy/portfolio1-smart/css/main.css
@@ -571,7 +571,7 @@ a {
   margin-right: 0px;
 }
 
-.look-book > div .look-book-btn a:hover {
+.look-book > div .look-book-btn a:hover, .look-book > div .look-book-btn a:focus {
   color: #272D31;
 }
 
