--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -375,6 +375,7 @@ section {
     left: 50%;
     transform: translateX(-50%);
     height: 100%;
+    overflow: hidden;
 
     li {
       position: absolute;
