--- a/Jungle-Academy/portfolio4-admin_design/css/header.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.css
@@ -19,6 +19,10 @@ a {
   color: inherit;
 }
 
+a:focus {
+  outline: 2px solid red;
+}
+
 input, button, select {
   display: inline-block;
   margin: 0px;
