--- a/Jungle-Academy/portfolio4-admin_design/css/index-reactive.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/index-reactive.css
@@ -155,19 +155,18 @@
     left: auto;
     -webkit-transform: none;
             transform: none;
-    margin-top: 10px;
+    height: auto;
   }
   .joing .joing-board li {
     position: relative;
     width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
-  .joing .joing-board li li + li {
+    height: calc(100vw - 47px);
     margin-top: 10px;
+    overflow: hidden;
   }
   .joing .weather-wrap {
     position: static;
+    margin-top: 10px;
   }
   .joing .weather-wrap .weather-today {
     float: none;
