--- a/Jungle-Academy/portfolio5-full_page_design/css/index_p.css
+++ b/Jungle-Academy/portfolio5-full_page_design/css/index_p.css
@@ -1,75 +1,27 @@
-section.intro {
-  background: #F8F8F8;
-}
-
-section.intro > div .content-wrap {
-  padding: 5%;
-}
-
-section.intro > div .content-wrap .img-wrap {
-  position: relative;
-  display: block;
-  float: left;
-  width: 50%;
-  height: 100%;
-  overflow: hidden;
-}
-
-section.intro > div .content-wrap .img-wrap img {
+main {
+  background: red;
   position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  top: 0px;
+  left: 0px;
   width: 100%;
 }
 
-section.intro > div .content-wrap div + div {
-  float: left;
-  width: 50%;
-  height: 100%;
-  padding: 3%;
-  background: #FCFBFC;
+#page1 {
+  display: none;
 }
 
-section.intro > div .content-wrap div + div p {
-  font-size: 18px;
-  line-height: 1.8;
-}
-
-section.intro > div .content-wrap div + div p span {
-  display: block;
-  font-size: 60px;
-}
-
-section.intro > div .content-wrap div + div ul li {
+.page {
+  position: absolute;
+  top: 0px;
+  left: 0px;
   width: 100%;
-  text-align: center;
-  font-weight: 500;
-}
-
-section.intro > div .content-wrap div + div > ul {
-  margin-top: 50px;
-}
-
-section.intro > div .content-wrap div + div > ul > li {
-  padding-bottom: 20px;
-  font-size: 20px;
-  text-align: left;
-}
-
-section.intro > div .content-wrap div + div > ul ul li a {
-  display: block;
-  padding: 15px;
-  margin-top: 10px;
-  background: #ABCCB1;
-  font-size: 18px;
-}
-
-.section {
+  height: 100vh;
+  overflow: hidden;
+  z-index: -1;
   background: #FFEDC2;
 }
 
-.section .content-wrap {
+.page .content-wrap {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -80,218 +32,141 @@ section.intro > div .content-wrap div + div > ul ul li a {
   -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
           box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   background: #F8F8F8;
-}
-
-.section .content-wrap .content {
-  position: relative;
-  height: 100%;
-  width: 100%;
-}
-
-.section .content-wrap .control .prev img, .section .content-wrap .control .next img {
-  width: 80px;
-}
-
-.section .content-wrap .control .prev {
-  position: absolute;
-  top: 50%;
-  left: -90px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-}
-
-.section .content-wrap .control .next {
-  position: absolute;
-  top: 50%;
-  right: -90px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-}
-
-.section .content-wrap .indicator {
-  position: absolute;
-  left: 0;
-  bottom: 20px;
-  width: 100%;
-  text-align: center;
-  font-size: 15px;
-}
-
-.pp1 .content-wrap .content li:nth-child(2) {
-  display: none;
-}
-
-.pp2 .content-wrap .content li:first-child {
-  display: none;
-}
-
-.content > li {
-  position: absolute;
-  top: 50%;
-  left: 5%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 90%;
-  height: 80%;
   overflow: hidden;
+  padding: 5%;
 }
 
-.content > li img {
-  display: block;
-  position: absolute;
+.page.intro {
+  background: #F8F8F8;
+}
+
+.page.intro .content-wrap > div {
+  position: relative;
   top: 50%;
-  left: 0%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 53%;
-}
-
-.content > li .desk {
-  float: right;
-  width: 45%;
-}
-
-.content > li .desk table {
-  width: 100%;
-  line-height: 1.3;
-}
-
-.content > li .desk table caption {
-  text-align: left;
-  font-size: 60px;
-  font-weight: 300;
-  margin-bottom: 50px;
-  line-height: 1.1;
-}
-
-.content > li .desk table caption span {
-  display: block;
-  font-size: 50px;
-  font-weight: 100;
-}
-
-.content > li .desk table tbody tr {
-  line-height: 1.5;
-}
-
-.content > li .desk table tbody tr th {
-  font-size: 20px;
-  font-weight: 500;
-}
-
-.content > li .desk table tbody tr td {
-  font-size: 18px;
-  color: #555555;
-}
-
-.content > li .desk table tbody tr td a {
-  background: url(../img/icon/click-icon.png) no-repeat right center/25px 25px;
-  margin-left: 5px;
-  padding: 0px 18px 4px 4px;
-  border-bottom: 1px dotted #555555;
-  font-weight: 500;
-}
-
-.content > li .desk .sub-title {
-  margin-top: 50px;
-}
-
-.content > li .desk .sub-title li {
-  background: url(../img/icon/importance-icon.svg) no-repeat left center/25px 25px;
-  font-size: 23px;
-  padding-left: 35px;
-  color: #333333;
-}
-
-.content > li .desk .sub-title li span {
-  color: red;
-}
-
-.content > li .btn {
-  width: 80%;
-  margin-top: 50px;
-}
-
-.content > li .btn a {
-  display: block;
-  float: right;
-  width: 40%;
-  padding: 3.5%;
-  margin-top: 10px;
-  background: #FCFBFC;
-  font-size: 18px;
-  text-align: center;
-  border: 2px solid #7D7563;
-  border-radius: 8px;
-  -webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4), 1px 1px 5px rgba(0, 0, 0, 0.4);
-          box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4), 1px 1px 5px rgba(0, 0, 0, 0.4);
-  -webkit-transition: all .4s;
-  transition: all .4s;
-}
-
-.content > li .btn a:first-child {
+  -webkit-transform: translate(0%, -50%);
+          transform: translate(0%, -50%);
+  width: 49%;
+  height: 100%;
   float: left;
 }
 
-.content > li .btn a:hover {
-  background: #7D7563;
-  color: #fff;
-  border-color: #FCFBFC;
-}
-
-.content li + li .btn {
-  position: absolute;
-  left: 50%;
-  bottom: 2%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  width: 30%;
+.page.intro .img-wrap {
   overflow: hidden;
-  margin-top: 0px;
 }
 
-.content .explain-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: 90%;
-  padding: 3%;
-}
-
-.content .explain-wrap > li {
-  position: relative;
-  width: 30%;
-  height: 100%;
-  padding: 3%;
-  overflow: hidden;
-  border: 1px dotted gray;
-  color: #333333;
-}
-
-.content .explain-wrap > li > img, .content .explain-wrap > li > ul {
+.page.intro .img-wrap img {
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  width: 90%;
+}
+
+.page.intro .img-wrap + div h3 {
+  height: 15%;
+  font-size: 50px;
+  letter-spacing: 5px;
+}
+
+.page.intro .img-wrap + div p {
+  height: 25%;
+  font-size: 18px;
+}
+
+.page.intro .img-wrap + div ul {
+  height: 60%;
+}
+
+.page.intro .img-wrap + div ul li {
+  height: 50px;
+  line-height: 50px;
+  background: #F8F8F8;
+}
+
+.page.intro .img-wrap + div ul li:first-of-type {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.page.intro .img-wrap + div ul li + li {
+  margin-top: 0.8%;
+}
+
+.page.intro .img-wrap + div ul li + li a {
+  display: block;
   width: 100%;
+  height: 100%;
+  background: #ABCCB1;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
 }
 
-.content .explain-wrap .sub-explain ul {
-  padding-left: 5%;
+.page ul.content-wrap {
+  background: red;
 }
 
-.content .explain-wrap .sub-explain ul li {
-  background: url(../img/icon/importance-icon.svg) no-repeat left center/25px 25px;
-  font-size: 23px;
-  padding-left: 35px;
-  color: #333333;
+.page ul.content-wrap > li {
+  width: 100%;
+  height: 100%;
+  float: left;
+  background: pink;
 }
 
-.pp1 .content-wrap .content li .desk table tbody tr td a {
-  padding: 0px 25px 4px 4px;
+section > h2 {
+  width: 0px;
+  height: 0px;
+  font-size: 0px;
+}
+
+#page-indicator {
+  position: fixed;
+  top: 50%;
+  right: 20px;
+  -webkit-transform: translate(-50%, 0%);
+          transform: translate(-50%, 0%);
+  z-index: 0;
+}
+
+#page-indicator li + li {
+  margin-top: 5px;
+}
+
+#page-indicator li {
+  position: relative;
+}
+
+#page-indicator li a {
+  display: block;
+  width: 20px;
+  height: 20px;
+  overflow: hidden;
+}
+
+#page-indicator li a span {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background: #333;
+  -webkit-transition: width .1s, height .1s;
+  transition: width .1s, height .1s;
+  text-indent: -9999px;
+}
+
+#page-indicator li a:hover span {
+  width: 10px;
+  height: 10px;
+}
+
+#page-indicator li a.on span {
+  width: 12px;
+  height: 12px;
 }
 /*# sourceMappingURL=index_p.css.map */
