--- a/Jungle-Academy/portfolio5-full_page_design/css/index_reset.css
+++ b/Jungle-Academy/portfolio5-full_page_design/css/index_reset.css
@@ -1,10 +1,19 @@
 @import url("http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700");
 @import url("http://fonts.googleapis.com/earlyaccess/notosanskr.css");
-div, section, p, span, ul, li, img {
+div, section, p, span, ul, li, img, a {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6, em, strong, span {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: inherit;
+  font-weight: normal;
 }
 
 li {
