--- a/Jungle-Academy/portfolio5-full_page_design/css/index_reset.scss
+++ b/Jungle-Academy/portfolio5-full_page_design/css/index_reset.scss
@@ -6,6 +6,7 @@ h1, h2, h3, h4, h5, h6, em, strong, span {margin: 0; padding: 0; box-sizing: bor
 li {list-style: none;}
 a {text-decoration: none; color: inherit;}
 body {
+  margin: 0;
   font-family: 'Roboto', 'Noto Sans KR', 'sans-serif';
   font-size: 14px;
   min-width: 320px;
